Beta-14:
Fix: Some race flagship names were set incorrectly.
Change: Autorotate applied instantly to all ships when entering a new sector.
Change: Improved escort behavior at the expense of performance.
Change: Escort performance increased - now only applies to ships in sector with player.
Change: Moved attack logic to a custom script.
Change: Autorotate for personal ship disabled by default, setting to turn on is now found in 9979-L044.
Change: Readme updated.

Beta-13:
Fix: Several marine equipment bugs and some typos. Thanks Fallout (EG)!

Beta-12:
Fix: Built Complexes kept vanilla names.
Fix: Ship components were using vanilla names in the Sanctuary production menu.
Fix: Some bugs in the escort command introduced in Beta-11.
Change: Standard formation for AI followers from The Shield to Big Ship Escort.
Change: Player "delta" formation changed to actually be "Big Ship Escort".

Beta-11:
Fix: Autorotate monitor forced to wait a bit when player jumps into new sector to protect against terminating prematurely.
Change: Add option in 1000-L044.xml to disable destroying and rebuilding corporations on new game start.
Change: Tried to make ships escorting ships behave better instead of freaking out.

Beta-10:
Fix: Rogue Mining Droid ships were showing up in the Ship Compendium.
Change: Raider Corvette marine count increased to 12.
Change: Rogue Shadow marine count decreased to 10. 
Change: Since Fighters can't equip jumpdrives, all starts make sure you have a ship that can transport at least 1 fighter.

Beta-9:
Fix: Supply drone was bugged in multiple ways.
Change: Jumpdrive & Quantum Jumprive Extension ar now XL size. Fighters can no longer use them (except miners & Sith Scimitar).
Change: Sith Scimitar carries more cargo, is faster, and is more expensive.
Change: All TP and M8 can now carry XL size cargo.

Beta-8:
Fix: Updated the SRST.xml file for correct combat jobs.
Fix: Attack script wasn't working properly.
Fix: Added missing setup.temetvince script.